deploy: fce52e56db2e588bdfc55d7ce2717f623c4ff3e7

--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -56,7 +56,9 @@
     <span class="n">scan</span> <span class="o">=</span> <span class="s1">&#39;scan&#39;</span>
     <span class="n">assessor</span> <span class="o">=</span> <span class="s1">&#39;assessor&#39;</span>
     <span class="n">reconstruction</span> <span class="o">=</span> <span class="s1">&#39;reconstruction&#39;</span>
-    <span class="n">resource</span> <span class="o">=</span> <span class="s1">&#39;resource&#39;</span></div>
+    <span class="n">resource</span> <span class="o">=</span> <span class="s1">&#39;resource&#39;</span>
+    <span class="n">in_resource</span> <span class="o">=</span> <span class="s1">&#39;in_resource&#39;</span>
+    <span class="n">out_resource</span> <span class="o">=</span> <span class="s1">&#39;out_resource&#39;</span></div>
 
 
 <div class="viewcode-block" id="XmlCleaner"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner">[docs]</a><span class="k">class</span> <span class="nc">XmlCleaner</span><span class="p">:</span>
@@ -113,6 +115,10 @@
             <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
         <span class="p">},</span>
         <span class="n">XnatType</span><span class="o">.</span><span class="n">resource</span><span class="p">:</span> <span class="p">{</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">in_resource</span><span class="p">:</span> <span class="p">{</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">out_resource</span><span class="p">:</span> <span class="p">{</span>
         <span class="p">}</span>
     <span class="p">}</span>
 
