deploy: c1b7648d6805d5ee7b6817feb32eb34ddf6c906e

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -37,7 +37,12 @@
           <div class="body" role="main">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="copyxnat/pyreporter/pyreporter.html">copyxnat.pyreporter.pyreporter</a></li>
+<ul><li><a href="copyxnat/commands/check_datatypes_command.html">copyxnat.commands.check_datatypes_command</a></li>
+<li><a href="copyxnat/commands/copy_command.html">copyxnat.commands.copy_command</a></li>
+<li><a href="copyxnat/commands/export_command.html">copyxnat.commands.export_command</a></li>
+<li><a href="copyxnat/commands/find_commands.html">copyxnat.commands.find_commands</a></li>
+<li><a href="copyxnat/commands/show_command.html">copyxnat.commands.show_command</a></li>
+<li><a href="copyxnat/pyreporter/pyreporter.html">copyxnat.pyreporter.pyreporter</a></li>
 <li><a href="copyxnat/ui/copyxnat_command_line.html">copyxnat.ui.copyxnat_command_line</a></li>
 <li><a href="copyxnat/utils/versioneer_version.html">copyxnat.utils.versioneer_version</a></li>
 <li><a href="copyxnat/utils/versioning.html">copyxnat.utils.versioning</a></li>
