--- a/genindex.html
+++ b/genindex.html
@@ -85,19 +85,19 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.CACHE_TYPE">CACHE_TYPE (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.CACHE_TYPE">CACHE_TYPE (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.CACHE_TYPE">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.CACHE_TYPE">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.CACHE_TYPE">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.CACHE_TYPE">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.CACHE_TYPE">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.CACHE_TYPE">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CacheBox">CacheBox (class in copyxnat.xnat.copy_cache)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand">CheckDatatypesCommand (class in copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand">CheckDatatypesCommand (class in copyxnat.commands.check_datatypes_command)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.clean">clean() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 
@@ -109,33 +109,75 @@
       </ul></li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.COMMAND_LINE">COMMAND_LINE (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.COMMAND_LINE">COMMAND_LINE (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.COMMAND_LINE">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.COMMAND_LINE">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.COMMAND_LINE">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.COMMAND_LINE">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.COMMAND_LINE">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.COMMAND_LINE">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandInputs">CommandInputs (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandReturn">CommandReturn (class in copyxnat.xnat.commands)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.commands">commands() (in module copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.commands">commands() (in module copyxnat.commands.find_commands)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.complete_progress">complete_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache">CopyCache (class in copyxnat.xnat.copy_cache)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand">CopyCommand (class in copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand">CopyCommand (class in copyxnat.commands.copy_command)</a>
 </li>
       <li>
     copyxnat
 
       <ul>
         <li><a href="copyxnat.html#module-copyxnat">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.commands
+
+      <ul>
+        <li><a href="copyxnat.commands.html#module-copyxnat.commands">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.commands.check_datatypes_command
+
+      <ul>
+        <li><a href="copyxnat.commands.check_datatypes_command.html#module-copyxnat.commands.check_datatypes_command">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.commands.copy_command
+
+      <ul>
+        <li><a href="copyxnat.commands.copy_command.html#module-copyxnat.commands.copy_command">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.commands.export_command
+
+      <ul>
+        <li><a href="copyxnat.commands.export_command.html#module-copyxnat.commands.export_command">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.commands.find_commands
+
+      <ul>
+        <li><a href="copyxnat.commands.find_commands.html#module-copyxnat.commands.find_commands">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.commands.show_command
+
+      <ul>
+        <li><a href="copyxnat.commands.show_command.html#module-copyxnat.commands.show_command">module</a>
 </li>
       </ul></li>
       <li>
@@ -152,6 +194,8 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -173,8 +217,6 @@
         <li><a href="copyxnat.utils.html#module-copyxnat.utils">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.utils.versioneer_version
 
@@ -326,7 +368,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand">ExportCommand (class in copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand">ExportCommand (class in copyxnat.commands.export_command)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -344,7 +386,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.find_command">find_command() (in module copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.find_command">find_command() (in module copyxnat.commands.find_commands)</a>
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.full_path">full_path() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
@@ -422,14 +464,14 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.HELP">HELP (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.HELP">HELP (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.HELP">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.HELP">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.HELP">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.HELP">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.HELP">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.HELP">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -502,6 +544,18 @@
       <ul>
         <li><a href="copyxnat.html#module-copyxnat">copyxnat</a>
 </li>
+        <li><a href="copyxnat.commands.html#module-copyxnat.commands">copyxnat.commands</a>
+</li>
+        <li><a href="copyxnat.commands.check_datatypes_command.html#module-copyxnat.commands.check_datatypes_command">copyxnat.commands.check_datatypes_command</a>
+</li>
+        <li><a href="copyxnat.commands.copy_command.html#module-copyxnat.commands.copy_command">copyxnat.commands.copy_command</a>
+</li>
+        <li><a href="copyxnat.commands.export_command.html#module-copyxnat.commands.export_command">copyxnat.commands.export_command</a>
+</li>
+        <li><a href="copyxnat.commands.find_commands.html#module-copyxnat.commands.find_commands">copyxnat.commands.find_commands</a>
+</li>
+        <li><a href="copyxnat.commands.show_command.html#module-copyxnat.commands.show_command">copyxnat.commands.show_command</a>
+</li>
         <li><a href="copyxnat.pyreporter.html#module-copyxnat.pyreporter">copyxnat.pyreporter</a>
 </li>
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">copyxnat.pyreporter.pyreporter</a>
@@ -543,14 +597,14 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.NAME">NAME (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.NAME">NAME (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.NAME">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.NAME">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.NAME">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.NAME">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.NAME">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.NAME">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.NAMESPACES">NAMESPACES (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
@@ -593,7 +647,7 @@
         <li><a href="versioneer.html#versioneer.plus_or_dot">(in module versioneer)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.print_results">print_results() (copyxnat.xnat.commands.CheckDatatypesCommand method)</a>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.print_results">print_results() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
 
       <ul>
         <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.print_results">(copyxnat.xnat.commands.Command method)</a>
@@ -715,16 +769,16 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.run">run() (copyxnat.xnat.commands.CheckDatatypesCommand method)</a>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.run">run() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.run">(copyxnat.commands.copy_command.CopyCommand method)</a>
+</li>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.run">(copyxnat.commands.export_command.ExportCommand method)</a>
+</li>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.run">(copyxnat.commands.show_command.ShowCommand method)</a>
+</li>
         <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">(copyxnat.xnat.commands.Command method)</a>
-</li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.run">(copyxnat.xnat.commands.CopyCommand method)</a>
-</li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.run">(copyxnat.xnat.commands.ExportCommand method)</a>
-</li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.run">(copyxnat.xnat.commands.ShowCommand method)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.run_command">run_command() (in module copyxnat.utils.versioneer_version)</a>
@@ -761,7 +815,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SESSION_ID_MAP">SESSION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand">ShowCommand (class in copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand">ShowCommand (class in copyxnat.commands.show_command)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.start_progress">start_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
@@ -791,14 +845,14 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.USE_DST_SERVER">USE_DST_SERVER (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.USE_DST_SERVER">USE_DST_SERVER (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.USE_DST_SERVER">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.USE_DST_SERVER">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.USE_DST_SERVER">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.USE_DST_SERVER">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.USE_DST_SERVER">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.USE_DST_SERVER">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
   </ul></td>
